--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/charts": "^3.15.0",
     "@chakra-ui/react": "^3.15.0",
     "@emotion/react": "^11.14.0",
     "@tailwindcss/vite": "^4.1.3",
@@ -18,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "recharts": "^2.15.2",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
